--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,30 @@
 # Prerequisites
 *.d
 
-# Compiled Object files
+# Compiled Object Files
 *.slo
 *.lo
 *.o
 *.obj
+*.gch
 
 # Precompiled Headers
-*.gch
 *.pch
 
-# Linker files
+# Linker Files
 *.ilk
+*.exp
 
 # Debugger Files
 *.pdb
+*.dwo
 
-# Compiled Dynamic libraries
+# Compiled Dynamic Libraries
 *.so
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
+# Compiled Static Libraries
 *.lai
 *.la
 *.a
@@ -37,5 +35,52 @@
 *.out
 *.app
 
-# debug information files
-*.dwo
+# Fortran Module Files
+*.mod
+*.smod
+
+# Build Directories
+build/
+bin/
+out/
+Debug/
+Release/
+x64/
+x86/
+
+# IDE Files (Visual Studio)
+*.sdf
+*.opensdf
+*.suo
+*.user
+*.vcxproj.user
+*.ncb
+*.log
+*.tlog
+*.idb
+*.ipch
+
+# CMake
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+install_manifest.txt
+
+# Qt (if used)
+moc_*
+qrc_*
+ui_*
+
+# Code::Blocks
+*.depend
+*.layout
+*.cbp
+
+# OS / Misc
+.DS_Store
+Thumbs.db
+*.bak
+*.swp
+
+.vs
